# pomodoroflow-rs

./: .gitignore  AGENTS.md  Cargo.toml  README.md  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
.github/workflows/: windows-daily-release.yml
docs/: active_context.md  architecture.md  bug_fix_summary.md  requirements.md  setup_guide.md
migrations/: 001_initial.sql  001_initial_minimal.sql
src/: App.tsx  index.html  lib.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src-tauri/src/commands/: config_commands.rs  mod.rs  pomodoro_commands.rs  sync_commands.rs  todo_commands.rs  validators.rs
src/async_utils/: mod.rs  task_manager.rs
src/components/: FloatingSettingsButton.tsx  Header.tsx  LoadingSpinner.tsx  MainLayout.tsx  MessageToast.tsx  ParticleSystem.tsx  PomodoroTimer.tsx  SettingsPanel.tsx  StatsPanel.tsx  ThemeToggle.tsx  Toast.tsx  TodoList.tsx
src/core/: error.rs  github_sync.rs  mod.rs  pomodoro.rs  pomodoro_test.rs  state_test.rs  state_updater.rs  todo.rs  todo_test.rs
src/core/state/: app_state.rs  mod.rs
src/hooks/: useKeyboardShortcuts.ts
src/storage/: database.rs  database_test.rs  mod.rs
src/stores/: appStore.ts  themeStore.ts
src/styles/: App.css  FloatingSettingsButton.css  MessageToast.css  ParticleSystem.css  PomodoroCard.css  PomodoroTimer.css  SettingsPanel.css  ThemeToggle.css  TodoList.css  iOS-layout.css  iOS-theme.css  index.css  reset.css
src/test/: MessageToast.test.tsx  PomodoroTimer.test.tsx  SettingsPanel.test.tsx  ThemeToggle.test.tsx  TodoList.test.tsx  appStore.test.ts  integration.test.tsx  performance.test.tsx  setup.js  useKeyboardShortcuts.test.ts
src/utils/: debug.ts  mod.rs  notifier.rs  sound.rs
