[package]
name = "pomoflow-rs-tauri"
version = "0.1.0"
description = "A Pomodoro Timer + Todo Manager with GitHub sync"
authors = ["You"]
license = "MIT"
repository = "https://github.com/yourusername/pomoflow-rs"
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.0", features = [] }

[dependencies]
# Core library (引用主项目的库)
pomoflow-rs = { path = "../", features = [] }

# Tauri 框架
tauri = { version = "1.0", features = [ "window-unminimize", "window-maximize", "fs-remove-file", "window-close", "window-start-dragging", "shell-open", "fs-remove-dir", "fs-exists", "window-show", "fs-read-file", "path-all", "fs-create-dir", "window-unmaximize", "notification-all", "window-hide", "global-shortcut-all", "fs-write-file", "protocol-asset", "fs-rename-file", "window-minimize"] }

# 异步运行时
tokio = { version = "1.0", features = ["full"] }

# 序列化
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# 日志
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt"] }

# 错误处理
anyhow = "1.0"
thiserror = "1.0"

# 时间处理
chrono = "0.4"

# 目录
dirs = "5.0"

# 线程安全包装
send_wrapper = "0.6"

# futures 实用工具
futures-util = "0.3"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "unwind"
